--- a/bridge.html
+++ b/bridge.html
@@ -135,7 +135,7 @@ select {
         document.write(date);
         </script></b>
    </div>
-		<a href="https://time.is/Port_Charlotte" id="time_is_link" rel="nofollow" style="font-size:18px;">EDT:</a> <span id="Port_Charlotte_z161" style="font-size:16px;font-weight: bold"></span>
+		<br><a href="https://time.is/Port_Charlotte" id="time_is_link" rel="nofollow" style="font-size:18px;">EDT:</a> <span id="Port_Charlotte_z161" style="font-size:16px;font-weight: bold"></span>
         <script src="https://widget.time.is/en.js"></script>
         <script>
           time_is_widget.init({
