--- a/bridge.html
+++ b/bridge.html
@@ -17,7 +17,7 @@
   background: #004080;
   color: white;
   text-align: center;
-  padding: 1rem;
+  padding: .12rem;
 }
 
 .banner h1 {
@@ -125,7 +125,7 @@ select {
 </head>
 <body>
   <header class="banner">
-         <br><b>Today is:
+         <b>Today is:
 		<script>
 		const weekday = ["Sunday ","Monday ","Tuesday ","Wednesday ","Thursday ","Friday ","Saturday "];
         const d = new Date();
