--- a/bridge.html
+++ b/bridge.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Gulf & Okeechobee Bridge Openings</title>
-  <link rel="stylesheet" href="styles.css">
-  <style>
+   <style>
  body {
   font-family: "Lato", sans-serif;
   background: #f0f6fb;
@@ -135,7 +134,7 @@ select {
         document.write(date);
         </script></b>
    </div>
-		<br><a href="https://time.is/Port_Charlotte" id="time_is_link" rel="nofollow" style="font-size:18px;">EDT:</a> <span id="Port_Charlotte_z161" style="font-size:16px;font-weight: bold"></span>
+		<br><a href="https://time.is/Port_Charlotte" id="time_is_link" rel="nofollow" style="Color:White;font-size:18px;">EDT:</a> <span id="Port_Charlotte_z161" style="font-size:16px;font-weight: bold"></span>
         <script src="https://widget.time.is/en.js"></script>
         <script>
           time_is_widget.init({
