--- a/bridge.html
+++ b/bridge.html
@@ -165,14 +165,15 @@ select {
 		date = new Date().toLocaleDateString();
      	document.write(date);
      	</script></b>
-     <a href="https://time.is/Port_Charlotte" id="time_is_link" rel="nofollow" style="Color:White;font-size:18px;">EDT:</a> <span id="Port_Charlotte_z161" style="font-size:16px;font-weight: bold"></span>
+     <br><a href="https://time.is/Port_Charlotte" id="time_is_link" rel="nofollow" style="Color:White;font-size:18px;">EDT:</a> 
+	 <span id="Port_Charlotte_z161" style="font-size:16px;font-weight: bold"></span>
 
       <script src="https://widget.time.is/en.js"></script>
       <script>
       	time_is_widget.init({
       	  Port_Charlotte_z161: {
       	    template: "SUN",
-      	    sun_format: "Sunrise: srhour:srminute AM Sunset: ss12hour:ssminute PM",
+      	    sun_format: "Sunrise: srhour:srminute AM <br>Sunset: ss12hour:ssminute PM",
       	    coords: "26.9761700,-82.0906400"
       	  }
       	});
