--- a/bridge.html
+++ b/bridge.html
@@ -59,6 +59,7 @@ select {
   font-size: 1.2rem; /* Increased font size */
   border-radius: 6px;
   border: 1px solid #ccc;
+  background-color: rgb(198, 208, 222);
 }
  
 .icon {
