Update page title and banner text in bridge.html
Changed the HTML title to 'Bridge Openings and ....' and updated the banner text for clarity. Removed unused banner h1 CSS and added an author comment in the styles section.

--- a/bridge.html
+++ b/bridge.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <title>Gulf & Okeechobee Bridge Openings</title>
+  <title>Bridge Openings and ....</title>
    <style>
+/* **Written By G Adamczyk, all rights reserved** */
 /* **START of primary styles** */
 body {
   font-family: Roboto, Arial;
@@ -22,11 +23,6 @@ body {
   text-align: center;
   padding: 0.8rem 0.12rem; /* Reduced vertical padding slightly */
 }
-
-/* Existing banner h1 not in use, but keeping for reference if needed */
-/* .banner h1 {
-  margin: 0.5rem 0 0;
-} */
 
 .container {
   max-width: 900px;
@@ -212,7 +208,7 @@ select {
   <main class="container">
     <section class="bridge-section">
 <img src="BridgeIcon.png" alt="Bridge Icon" class="top-image"><br>
-<div style="text-align: center;">This site works best on smartphones and tablets for bridge openings</div>
+<div style="text-align: center;">Bridge openings best viewed on small devices</div>
 
   <h2 class="bridge-title">Gulf & Okeechobee Bridge Openings</h2>
 
