--- a/bridge.html
+++ b/bridge.html
@@ -133,6 +133,30 @@ select {
       color: #003366;
       font-family: Arial, Helvetica, sans-serif;
     }
+    /* Style for dropdown arrow */
+select {
+  /* Your existing styles */
+  width: 100%;
+  font-weight: bold;
+  padding: 0.75rem;
+  font-size: 1.2rem;
+  border-radius: 6px;
+  border: 1px solid #ccc;
+  background-color: rgb(198, 208, 222);
+  
+  /* New styles for arrow */
+  appearance: none; /* Removes default arrow in modern browsers */
+  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%23004080' stroke-width='5' stroke-linecap='round' stroke-linejoin='round'%3e%3cpolyline points='6 9 12 15 18 9'%3e%3c/polyline%3e%3c/svg%3e");
+  background-repeat: no-repeat;
+  background-position: right 1rem center;
+  background-size: 1.5rem; /* Makes the arrow larger */
+  padding-right: 3rem; /* Adds space for the larger arrow */
+}
+
+/* For older WebKit browsers (Safari, older Chrome) */
+select::-webkit-expand {
+  display: none; /* Hides default arrow */
+}
 </style>
 </head>
 <body>
@@ -215,6 +239,7 @@ select {
   
 <div class="dropdown-section">
   <label for="northBridges">North Bridges (Call Ch9):</label>
+  <div class="custom-select-wrapper">
   <select id="northBridges" class="bridge-dropdown">
     <option value="">Select North Bridge</option>
               <option value="https://www.waterwayguide.com/bridge/3-199/boca-grande-swing-bridge">MM34.3 Boca Grande Swing</option>
@@ -320,7 +345,7 @@ select {
 </div>
 
 <div class="dropdown-section">
-  <label for="okeechobee">Okeechobee Bridges(Call Ch9) Locks (on Ch13):</label>
+  <label for="okeechobee">Okeechobee Bridges(Call Ch9)<br>Locks (on Ch13):</label>
   <select id="okeechobee" class="bridge-dropdown">
             
 						<option value="">
